# diff-dynamics-pd-gait

./: .gitignore  README.md  pyproject.toml
results/model/: model_config.json
results/model/checkpoints/: model_sub01.pt  model_sub02.pt  model_sub03.pt  model_sub05.pt  model_sub06.pt  model_sub07.pt  model_sub08.pt  model_sub09.pt  model_sub10.pt  model_sub11.pt  model_sub12.pt  model_sub13.pt  model_sub14.pt  model_sub15.pt  model_sub16.pt  model_sub17.pt  model_sub18.pt  model_sub19.pt  model_sub20.pt  model_sub21.pt  model_sub22.pt  model_sub24.pt
scripts/: analyze_stride.py  build_dataset.py  example_load_checkpoint.py  fig_model_walks.py  train.py
src/: __init__.py  canonicalize.py  graph_ode.py
