[project]
name = "gait-fog-kinematics"
version = "1.0.0"
description = "Graph-constrained Neural ODE for inter-joint coupling analysis in Parkinson's disease gait"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "diagrams>=0.25.1",
    "matplotlib>=3.10.9",
    "mermaid-py>=0.8.4",
    "networkx>=3.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "quarto>=0.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchdiffeq>=0.2.5",
    "xlrd>=2.0.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
